# test-tube

./: .gitignore  .gitmodules  Cargo.toml  README.md  RELEASE.md  test-tube.code-workspace
.github/workflows/: integration-check.yml  schedule-osmosis-test-tube-update.yaml  test.yml  update-osmosis-test-tube.yaml
scripts/: check-updates.sh  release.sh  update-osmosis-test-tube.sh
scripts/update-osmosis-test-tube-deps/: .gitignore  go.mod  main.go
test_contracts/simple-sudo/: Cargo.toml  NOTICE
test_contracts/simple-sudo/.cargo/: config
test_contracts/simple-sudo/src/: contract.rs  msg.rs  state.rs
