[package]
authors = ["Supanat Potiwarakorn <supanat.ptk@gmail.com>"]
edition = "2021"
name = "simple-sudo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "2.0.0"
cosmwasm-std = {version = "2.0.0"}
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.15"
serde = {version = "1.0.189", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.49"}

[dev-dependencies]
cw-multi-test = "2.0.0"
